GNOME Bugzilla – Bug 644571
critical assertion due to wrong variant type
Last modified: 2011-03-14 13:07:01 UTC
Created attachment 183217 [details] [review] patch gnome-settings-daemon emits a critical assertion on startup: (gnome-settings-daemon:6205): GLib-CRITICAL **: the GVariant format string `(u)' has a type of `(u)' but the given value has a type of `u' Patch attached.
Another good catch, thanks
Thanks for taking this patch, Matthias. Unfortunately the patch I submitted was improperly applied. My patch changed "(u)" to "u" in gsd_updates_refresh_init, but when you committed this you instead changed "(u)" to "u" in session_presence_signal_cb, so the critical assertion is still occurring. Not sure how to reopen this bug (or whether that's even something I can do).
Thanks for paying attention. Hopefully fixed now.