Updates: use the correct variant format

This avoids a critical at startup.  Patch by Adam Dingle,
https://bugzilla.gnome.org/show_bug.cgi?id=644571